konst/tests/misc_tests/iter_eval_cmp_feature_ui_tests/cmp_methods_type_err.stderr
error[E0308]: mismatched types
 --> tests/misc_tests/iter_eval_cmp_feature_ui_tests/cmp_methods_type_err.rs:4:16
  |
4 | const _: ()  = konst::iter::eval!{0..10u8, is_sorted()};
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found `bool`
  |
  = note: this error originates in the macro `$crate::__iter2_finish_lowering` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/misc_tests/iter_eval_cmp_feature_ui_tests/cmp_methods_type_err.rs:6:17
  |
6 | const _: bool = konst::iter::eval!{0..10u8, is_sorted_by(|x, y| 0u8)};
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `bool`, found `u8`
  |
  = note: this error originates in the macro `$crate::__eval_closure` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/misc_tests/iter_eval_cmp_feature_ui_tests/cmp_methods_type_err.rs:7:17
  |
7 | const _: bool = konst::iter::eval!{0..10u8, is_sorted_by(|x, y| -> u8 { 0u8 })};
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `bool`, found `u8`
  |
  = note: this error originates in the macro `$crate::__eval_closure` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/misc_tests/iter_eval_cmp_feature_ui_tests/cmp_methods_type_err.rs:8:17
  |
8 | const _: bool = konst::iter::eval!{0..10u8, is_sorted_by(|x: &u16, y| false)};
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&u16`, found `&u8`
  |
  = note: expected reference `&u16`
             found reference `&u8`
  = note: this error originates in the macro `$crate::iter::__eval2_lowering` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/misc_tests/iter_eval_cmp_feature_ui_tests/cmp_methods_type_err.rs:9:17
  |
9 | const _: bool = konst::iter::eval!{0..10u8, is_sorted_by(|x, y: &u16| false)};
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&u16`, found `&u8`
  |
  = note: expected reference `&u16`
             found reference `&u8`
  = note: this error originates in the macro `$crate::iter::__eval2_lowering` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/misc_tests/iter_eval_cmp_feature_ui_tests/cmp_methods_type_err.rs:10:15
   |
10 | const _: () = konst::iter::eval!{0..10u8, is_sorted_by(|x, y| false)};
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found `bool`
   |
   = note: this error originates in the macro `$crate::__iter2_finish_lowering` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/misc_tests/iter_eval_cmp_feature_ui_tests/cmp_methods_type_err.rs:11:15
   |
11 | const _: () = konst::iter::eval!{0..10u8, is_sorted_by(|x, y| -> bool { false })};
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found `bool`
   |
   = note: this error originates in the macro `$crate::__iter2_finish_lowering` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NoCmp: ConstCmp` is not satisfied
  --> tests/misc_tests/iter_eval_cmp_feature_ui_tests/cmp_methods_type_err.rs:13:17
   |
13 | const _: bool = konst::iter::eval!{0..10u8, is_sorted_by_key(|x| NoCmp)};
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `ConstCmp` is not implemented for `NoCmp`
   |
   = help: the following other types implement trait `ConstCmp`:
             &T
             &mut T
             CmpWrapper<P>
             NonZero<i128>
             NonZero<i16>
             NonZero<i32>
             NonZero<i64>
             NonZero<i8>
           and $N others
note: required by a bound in `__AssertConstCmp`
  --> src/cmp/const_cmp.rs
   |
   | pub struct __AssertConstCmp<'a, T: ConstCmp> {
   |                                    ^^^^^^^^ required by this bound in `__AssertConstCmp`
   = note: this error originates in the macro `$crate::cmp::const_cmp` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NoCmp: ConstCmp` is not satisfied
  --> tests/misc_tests/iter_eval_cmp_feature_ui_tests/cmp_methods_type_err.rs:13:17
   |
13 | const _: bool = konst::iter::eval!{0..10u8, is_sorted_by_key(|x| NoCmp)};
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `ConstCmp` is not implemented for `NoCmp`
   |
   = help: the following other types implement trait `ConstCmp`:
             &T
             &mut T
             CmpWrapper<P>
             NonZero<i128>
             NonZero<i16>
             NonZero<i32>
             NonZero<i64>
             NonZero<i8>
           and $N others
note: required by a bound in `__AssertConstCmp`
  --> src/cmp/const_cmp.rs
   |
   | pub struct __AssertConstCmp<'a, T: ConstCmp> {
   |                                    ^^^^^^^^ required by this bound in `__AssertConstCmp`
   = note: this error originates in the macro `$crate::cmp::const_cmp` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NoCmp: ConstCmp` is not satisfied
  --> tests/misc_tests/iter_eval_cmp_feature_ui_tests/cmp_methods_type_err.rs:13:17
   |
13 | const _: bool = konst::iter::eval!{0..10u8, is_sorted_by_key(|x| NoCmp)};
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `ConstCmp` is not implemented for `NoCmp`
   |
   = help: the following other types implement trait `ConstCmp`:
             &T
             &mut T
             CmpWrapper<P>
             NonZero<i128>
             NonZero<i16>
             NonZero<i32>
             NonZero<i64>
             NonZero<i8>
           and $N others
note: required by a bound in `IsAConstCmp::<<R as ConstCmp>::Kind, <R as ConstCmp>::This, R>::NEW`
  --> src/cmp/const_cmp.rs
   |
   |     R: ?Sized + ConstCmp,
   |                 ^^^^^^^^ required by this bound in `IsAConstCmp::<<R as ConstCmp>::Kind, <R as ConstCmp>::This, R>::NEW`
...
   |     pub const NEW: Self = Self(PhantomData);
   |               --- required by a bound in this associated constant
   = note: this error originates in the macro `$crate::__coerce_to_cmp2` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NoCmp: ConstCmp` is not satisfied
  --> tests/misc_tests/iter_eval_cmp_feature_ui_tests/cmp_methods_type_err.rs:13:17
   |
13 | const _: bool = konst::iter::eval!{0..10u8, is_sorted_by_key(|x| NoCmp)};
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `ConstCmp` is not implemented for `NoCmp`
   |
   = help: the following other types implement trait `ConstCmp`:
             &T
             &mut T
             CmpWrapper<P>
             NonZero<i128>
             NonZero<i16>
             NonZero<i32>
             NonZero<i64>
             NonZero<i8>
           and $N others
note: required by a bound in `IsAConstCmp::<<R as ConstCmp>::Kind, <R as ConstCmp>::This, R>::NEW`
  --> src/cmp/const_cmp.rs
   |
   |     R: ?Sized + ConstCmp,
   |                 ^^^^^^^^ required by this bound in `IsAConstCmp::<<R as ConstCmp>::Kind, <R as ConstCmp>::This, R>::NEW`
...
   |     pub const NEW: Self = Self(PhantomData);
   |               --- required by a bound in this associated constant
   = note: this error originates in the macro `$crate::__coerce_to_cmp2` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0282]: type annotations needed
  --> tests/misc_tests/iter_eval_cmp_feature_ui_tests/cmp_methods_type_err.rs:13:17
   |
13 | const _: bool = konst::iter::eval!{0..10u8, is_sorted_by_key(|x| NoCmp)};
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
   |
   = note: this error originates in the macro `$crate::cmp::const_cmp` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/misc_tests/iter_eval_cmp_feature_ui_tests/cmp_methods_type_err.rs:14:17
   |
14 | const _: bool = konst::iter::eval!{0..10u8, is_sorted_by_key(|_: &u16| 0u8)};
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^----^^^^^^^
   |                 |                                                |
   |                 |                                                expected due to this
   |                 expected `&u16`, found `u8`
   |
   = note: this error originates in the macro `$crate::iter::__eval2_lowering` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/misc_tests/iter_eval_cmp_feature_ui_tests/cmp_methods_type_err.rs:15:15
   |
15 | const _: () = konst::iter::eval!{0..10u8, is_sorted_by_key(|x| x)};
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found `bool`
   |
   = note: this error originates in the macro `$crate::__iter2_finish_lowering` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)
